Number of cards added per page

--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
   <div class="main-card">
     <div class="inner-card"></div>
   </div>
+  <div class="main-card">
+    <div class="inner-card"></div>
+  </div>
+  <div class="main-card">
+    <div class="inner-card"></div>
+  </div>
 </div>
 </div>
   
